<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginPageBackgroundColor"
            tools:context=".LoginFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="132dp"
                android:text="@string/createevent"
                android:textAllCaps="true"
                android:textSize="16sp" />

        <!-- Snippet from "Add text fields" section goes here. -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventnamelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_eventname"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventnametext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hostnametextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_hostname"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hostnametext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptiontextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_description"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptiontext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_date"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/datetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeslot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_timeslot"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeslottext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentuserslayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_currentusers"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentuserstext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxuserslayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_maxusers"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/maxuserstext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pricelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_price"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pricetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/venueid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_venueid"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/venueidtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>




        <!-- Snippet from "Add buttons" section goes here. -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/submit_button" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_to_menu"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/submit_button"
                    android:layout_toLeftOf="@id/submit_button"
                    android:text="@string/back_to_menu" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
