<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginPageBackgroundColor"
            tools:context=".LoginFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="132dp"
                android:text="@string/timeslotsearch"
                android:textAllCaps="true"
                android:textSize="16sp" />

        <!-- Snippet from "Add text fields" section goes here. -->

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datelayoutc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_date"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/datetextc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/venueidc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_venueid"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/venueidtextc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>




        <!-- Snippet from "Add buttons" section goes here. -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_button_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/submit_button" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_to_menu_b"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/submit_button_b"
                    android:layout_toLeftOf="@id/submit_button_b"
                    android:text="@string/back_to_menu" />

        </RelativeLayout>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eventlist"/>

    </LinearLayout>
</ScrollView>
